--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,25 @@
-.navber{
-    display: flex; 
+.navber {
+    display: flex;
 }
-h5{
+
+h5 {
     color: rgba(0, 103, 71, 1);
     padding: 27px 120px 27px 0;
 }
 
-.navber img{
+.navber img {
     padding: 25px 60px 25px 2px;
 }
 
-.emergency h2{
+.emergency,
+h2 {
     font-size: 24px;
+    font-weight: 700;
+    color: rgba(17, 17, 17, 1);
+}
+
+.emergency,
+h6 {
+    font-size: 18px;
+    font-weight: 400;
 }
