added banner section

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,10 @@ h5 {
     background-color:rgba(1.25, 49.64, 34.61, 1),rgba(0, 103, 71, 1) 49.99%,rgba(1, 50, 35, 1);
 }
 
+.banner{
+    display: flex;
+}
+
 .emergency,
 h2 {
     font-size: 24px;
@@ -31,5 +35,4 @@ h6 {
 
 .emergency{
     display: flex;
-    text-align: center;
 }
